--- a/manifest.json
+++ b/manifest.json
@@ -1,22 +1,56 @@
 {
-  "name": "DNYF TETCH AI Research",
+  "name": "DNYF TETCH | AI Research",
   "short_name": "DNYF TETCH",
-  "description": "AI Research, Termux Projects, Terminal Emulators & Android Development",
+  "description": "AI Research, Termux Projects, Android Development & Server Creation",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#0A1217",
   "theme_color": "#3DDC84",
-  "orientation": "portrait-primary",
+  "orientation": "any",
   "icons": [
     {
-      "src": "/icons/icon-192.png",
-      "sizes": "192x192",
+      "src": "/icons/icon-72x72.png",
+      "sizes": "72x72",
       "type": "image/png"
     },
     {
-      "src": "/icons/icon-512.png",
+      "src": "/icons/icon-96x96.png",
+      "sizes": "96x96",
+      "type": "image/png"
+    },
+    {
+      "src": "/icons/icon-128x128.png",
+      "sizes": "128x128",
+      "type": "image/png"
+    },
+    {
+      "src": "/icons/icon-144x144.png",
+      "sizes": "144x144",
+      "type": "image/png"
+    },
+    {
+      "src": "/icons/icon-152x152.png",
+      "sizes": "152x152",
+      "type": "image/png"
+    },
+    {
+      "src": "/icons/icon-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "any maskable"
+    },
+    {
+      "src": "/icons/icon-384x384.png",
+      "sizes": "384x384",
+      "type": "image/png"
+    },
+    {
+      "src": "/icons/icon-512x512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
-  ]
+  ],
+  "categories": ["development", "productivity", "education"],
+  "lang": "en-US",
+  "dir": "ltr"
 }
